Small css fix for scrolldown btn visibility

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -54,9 +54,12 @@ body {
     margin-bottom: 28px;
     margin-top: 0
 }
-@media only screen and (max-height: 700px) {
+@media only screen and (max-height: 1000px) {
     .gm-intro h1 {
         font-size: 80px
+    }
+    .scrolldown-container .scrolldown-btn {
+        display: hidden;
     }
 }
 @media only screen and (min-width: 1180px) and (max-width: 1280px) {
